# texview

./: Licenses.txt  README.md
.github/workflows/: linux.yml  macos.yml  win_msvc.yml
src/: CMakeLists.txt  dds_defs.h  logging.cpp  main.cpp  msputils.m  sys_posix.cpp  sys_win.cpp  texload.cpp  texview.h  version.h
src/data/: texview_icon.h  texview_icon32.h
src/libs/: dg_libktx_extra.h  stb_impl.c
src/libs/glad/include/glad/: gl.h
src/libs/glad/src/: gl.c
src/libs/glfw/src/: wl_window.c
src/libs/ktx/: CMakeLists.txt  README.txt
testimages/: metal-dxt1-array.dds
